# globant-case

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
scripts/: create_tables.py  upload_data.py
src/api/: config.py  connector.py  main.py  models.py  schemas.py
src/api/routers/: ingestion.py  reports.py
terraform/: .terraform.lock.hcl  apis.tf  cloudbuild.tf  database.tf  iam.tf  main.tf  networking.tf  outputs.tf  services.tf  variables.tf
