[project]
name = "globant-case"
version = "0.1.0"
description = "Globant Case"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "psycopg2-binary",
    "requests",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "ipykernel",
]
