[project]
name = "globant-case"
version = "0.1.0"
description = "Globant Case"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "requests",
    "sqlalchemy>=2.0.41",
    "cloud-sql-python-connector[pg8000]>=1.18.2",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["src"]
