[project]
name = "globant-case"
version = "0.1.0"
description = "Globant Case"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.41",
    "cloud-sql-python-connector[pg8000]>=1.18.2",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.34.3",
    "fastapi>=0.115.13",
    "pg8000>=1.31.2",
    "pandas>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["src"]
